# alicorn0.rs

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml  test-format.sh
format/: Cargo.toml  format-harness.rs  lexer.rs  lib.rs  listify.rs
testcases/: Async.expected  Helpers.expected  NamespaceLibraryTemplate.expected  TopLevelFunctionTemplate.expected  Types.expected  arith.expected  bad-types.expected  basic-annotated.expected  continuation_not_wrapped_multiple_start.alc  functypes.expected  glsl-prelude.alc  glsl-prelude.expected  host-if.expected  host-prog.expected  host-to-func.expected  http-server.expected  implicit.expected  incompatible-type.expected  infix.expected  missing-field.expected  operative-do.expected  operative-tuple-desc.expected  plusasarg.alc  plusasarg.expected  prelude.expected  primes.alc  primes.expected  record-ascription.expected  record-dependency.expected  record-usage-1.expected  record-usage-2.expected  record-usage-3.expected  record-usage-4.expected  record-usage-5.expected  record-usage-6.expected  scratch.expected  semicolon_separated_parenlist.alc  semicolon_separated_parenlist.expected  switch-fail.expected  switch-test.expected  (+12 more)
